complete add pilot schema & fix stars alignment / display on profile page

--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -16,10 +16,6 @@
   text-align: right;
 }
 
-label {
-  margin-left: 0.5rem !important;
-  font-size: 1rem !important;
-}
 
 .button {
   margin: 10px !important;
