--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -11,19 +11,14 @@
 }
 
 .label {
-  margin-left: 0.5rem !important;
-  font-size: 1rem !important;
+  margin-left: 0.5rem ;
+  font-size: 1rem ;
   padding: 0.5rem;
   display: inline-block !important;
   width: 150px;
   text-align: right;
 }
 
-label {
-  margin-left: 0.5rem !important;
-  font-size: 1rem !important;
-  /* padding: 0.5rem; */
-}
 
 .space {
   margin-bottom: 18rem;
