--- a/src/pages/AddLocation/AddLocation.module.css
+++ b/src/pages/AddLocation/AddLocation.module.css
@@ -7,11 +7,6 @@
   text-align: left;
 }
 
-label {
-  margin-left: 0.5rem !important;
-  font-size: 1rem !important;
-  /* padding: 0.5rem; */
-}
 
 .main {
   display: flex; 
