--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -9,8 +9,3 @@
 button {
   margin: 0.5rem;
 }
-
-label {
-  font-size: 10px;
-  margin: 0.5rem;
-}
